analysisService-deployment.yaml
#analysis service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend3
  labels:
    app: backend3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend3
  template:
    metadata:
      labels:
        app: backend3
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
      - name: backend3
        image: kubregistry2.azurecr.io/backend3:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8004
      imagePullSecrets: 
        - name: kubernetessecretname
