dataQuering-deployment.yaml
#data quering service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend4
  labels:
    app: backend4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend4
  template:
    metadata:
      labels:
        app: backend4
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
      - name: backend4
        image: kubregistry2.azurecr.io/backend4:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8006
      imagePullSecrets: 
        - name: kubernetessecretname
