fastapi-app2-deployment.yaml
#weather api service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend6
  labels:
    app: backend6
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend6
  template:
    metadata:
      labels:
        app: backend6
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
      - name: backend6
        image: backend6:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8002
