fastapi-app5-deployment.yaml
#authentication service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
      - name: backend
        image: kubregistry1.azurecr.io/backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8005
      imagePullSecrets: 
        - name: kubernetessecretname
