plantManagementService-deployment.yaml
#plant management service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend5
  labels:
    app: backend5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend5
  template:
    metadata:
      labels:
        app: backend5
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
      - name: backend5
        image: kubregistry2.azurecr.io/backend5:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8007
      imagePullSecrets: 
        - name: kubernetessecretname
