schedulerService-deployment.yaml
#scheduler service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend9
  labels:
    app: backend9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend9
  template:
    metadata:
      labels:
        app: backend9
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
      - name: backend9
        image: kubregistry2.azurecr.io/backend9:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
      imagePullSecrets: 
        - name: kubernetessecretname
