sensorsService-deployment.yaml
#sensors service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2
  labels:
    app: backend2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
      - name: backend2
        image: kubregistry2.azurecr.io/backend2:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8003
      imagePullSecrets: 
        - name: kubernetessecretname
