weatherApiService-deployment.yaml
#weather api service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend6
  labels:
    app: backend6
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend6
  template:
    metadata:
      labels:
        app: backend6
    spec:
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 8.8.8.8
          - 8.8.4.4
      containers:
      - name: backend6
        image: kubregistry2.azurecr.io/backend6:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8002
      imagePullSecrets: 
        - name: kubernetessecretname
