fastapi-app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend2-service
spec:
  selector:
    app: backend2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8003
  type: ClusterIP
  sessionAffinity: ClientIP
