fastapi-app4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend3-service
spec:
  selector:
    app: backend3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8004
  type: ClusterIP
