fastapi-app6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend4-service
spec:
  selector:
    app: backend4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8006
  type: ClusterIP
