fastapi-app8-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend11-service
spec:
  selector:
    app: backend11
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8008
  type: ClusterIP
  sessionAffinity: ClientIP
