frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend1-service
spec:
  selector:
    app: frontend1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
  sessionAffinity: ClientIP
