kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9093
      targetPort: 9093
