plantManagementService-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend5-service
spec:
  selector:
    app: backend5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8007
  type: ClusterIP
  sessionAffinity: ClientIP
