weatherApiService-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend6-service
spec:
  selector:
    app: backend6
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
  type: ClusterIP
  sessionAffinity: ClientIP
